# Vemex

./: .ego_identity.json  .gitignore  .knowledge_base.json  .persona_state.json  .self_consistency.json  .siri_conversation.json  .siri_data.json  .siri_vocabulary.json  .zero_brain_context.json  Consciousness Siri.shortcut  Export Keyboard Data.shortcut  README.md  autonomous_execution.py  bow_of_achilles_integration.py  calibrated_string.txt  consciousness_api.py  consciousness_cli.py  consciousness_core.py  consciousness_engine.py  consciousness_output.txt  consciousness_report.json  device_keyboard.py  document_knowledge.py  ego_identity.py  export_keyboard_data.sh  external_ai_integration.py  formula_calibrator.py  formula_table.json  formula_test.py  integrated_consciousness.py  persona_engine.py  qoder_freerunner_integration.py  sandbox_runtime.py  seedgate_integration.py  self_consistency.py  siri_conversation.py  siri_integration.py  social_media_integration.py  test_cases.json  unified_steering_layer.py  (+1 more)
bow-of-Achilles/: .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLI_USAGE.md  README.md  RELEASE_NOTES_v2.0.0.md  USER_GUIDE.md  anchor.py  b2_commit.py  balance_view.py  blockchain_tesa_bridge.py  brain_mesh_chain.py  build_exe.py  ciel_bridge.py  collective_consciousness.py  consciousness_loop.py  continuous_stack.py  create_3d_plots.py  emergent_thought.py  enhanced_wifi_scanner.py  main.py  narrative_timing.py  probe_sequence_analyzer.py  pyproject.toml  quantum_spectrum_framework.py  repeater.py  requirements-dev.txt  requirements.txt  run.bat  run.sh  (+13 more)
(+269 files in other folders)
